<resources>
    <string name="app_name">Touren App 6</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_FragmentLogin">Bitte melden Sie sich an</string>
    <string name="hint_fahrernummer_4_stellig">Fahrernummer 4 - stellig</string>
    <string name="hint_lagernummer_3_stellig">Lagernummer 3 - stellig</string>
    <string name="lbl_btn_login">Login</string>
    <string name="SplashScreenTitle">Touren App</string>
    <string name="labelAllTourenFragment">Touren</string>
    <string name="lbl_neue_tour">Neue Tour</string>
    <string name="lbl_add_update_tour_activity">Tourdaten bearbeiten</string>
    <string name="hint_tournummer_6_stellig">Tournummer 6 - stellig</string>
    <string name="hint_tourdatum">Tourdatum tt.mm.jjjj</string>
    <string name="hint_tourdauer">Tourdauer hh:mm</string>
    <string name="hint_depotzeit_vor_tour">Depotzeit vor Tour</string>
    <string name="hint_depotzeit_nach_tour">Depotzeit nach Tour</string>
    <string name="lbl_AddUpdateTour_Activity">Tourdaten editieren</string>
    <string name="title_activity_touren">MainActivity</string>
</resources>